--- a/src/components/ProfilePage/ProfileCard.module.css
+++ b/src/components/ProfilePage/ProfileCard.module.css
@@ -2,7 +2,6 @@
     height: 400px;
     position: relative;
     top: -50px;
-    overflow: visible !important;
 }
 
 .logoContainer {
